--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@ html {
   font-size: 18px;
   background-color: #1b1919;
   display: grid;
-  place-items: center 
+  place-items: center;
 }
 
 h1,
@@ -52,7 +52,7 @@ ol {
 .button {
   background: transparent;
   border: 1px solid #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: inherit;
   font-weight: 700;
   font-size: 18px;
   text-align: center;
@@ -62,6 +62,11 @@ ol {
 
 .button:focus {
   outline: none;
+}
+
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
 }
 
 .button:active {
@@ -81,11 +86,14 @@ ol {
 
 .result__video-container {
   position: relative;
+  margin-bottom: 16px;
 }
 
 .result__video {
   width: 100%;
   height: 100%;
+  object-fit: cover;
+  object-position: center;
 } 
 
 .search-form {
@@ -95,7 +103,7 @@ ol {
 }
 
 .search-form__fieldset-title {
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: inherit;
   font-weight: 400;
   font-size: 18px;
   margin-bottom: 7px;
@@ -108,6 +116,10 @@ ol {
 .search-form__label {
   display: inline;
   width: fit-content;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  cursor: pointer;
 }
 
 .search-form__label:has(:focus-visible) {
@@ -119,11 +131,11 @@ ol {
   border-bottom: 1px solid #fff;
   border-top: 1px solid #fff;
   border-right: none;
-  width: 225px;
-  height: 27px;
+  min-width: 225px;
+  min-height: 27px;
   appearance: none;
   background: transparent;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: inherit;
   font-weight: 400;
   font-size: 18px;
   color: rgba(255, 255, 255, 0.7);
@@ -142,42 +154,36 @@ ol {
   margin-top: 5px;
 }
 
-.search-form__label {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  cursor: pointer;
-}
-
-.search-form__checkbox-list > .search-form__label:hover {
+.search-form__label > .search-form__label-text:hover {
   text-decoration: underline;
 }
 
 .search-form__pseudo-checkbox {
   display: inline-block;
   border: 1px solid #fff;
-  width: 20px;
-  height: 20px;
+  width: 19px;
+  height: 19px;
 }
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
   display: block;
   content: "";
   background-color: #fff;
-  width: 16px;
-  height: 16px;
+  width: 15px;
+  height: 15px;
   margin: 1px;
 }
 
 .search-form__submit-button {
   margin-top: auto;
-  width: 194px;
-  height: 34px;
+  min-width: 194px;
+  min-height: 34px;
 }
 
 .content__list {
   overflow: auto;
   position: relative;
+  height: 298px;
 }
 
 .content__details {
@@ -185,7 +191,6 @@ ol {
   flex-direction: column;
   gap: 26px;
   width: 100%;
-  height: 534px;
 } 
 
 .title {
@@ -214,11 +219,13 @@ ol {
 .content__video-card-thumbnail {
   width: 194px;
   height: 103px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .content__video-card-description-container {
   display: block;
-  width: 100%;
+  max-width: 100%;
   height: 100%;
 }
 
@@ -233,6 +240,9 @@ ol {
   font-size: 30px;
   line-height: 100%;
   text-transform: uppercase;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden; 
 }
 
 .content__video-card-description {
@@ -242,8 +252,9 @@ ol {
 }
 
 .more-button {
-  width: 399px;
-  height: 34px;
+  min-width: 393px;
+  min-height: 34px;
+  margin: 2px;
 }
 
 .content__card-link {
