--- a/styles/style.css
+++ b/styles/style.css
@@ -86,6 +86,8 @@ ol {
 
 .result__video-container {
   position: relative;
+  width: 711px;
+  height: 386px;
   margin-bottom: 16px;
 }
 
@@ -154,7 +156,7 @@ ol {
   margin-top: 5px;
 }
 
-.search-form__label > .search-form__label-text:hover {
+.search-form__label:hover .search-form__label-text {
   text-decoration: underline;
 }
 
@@ -184,6 +186,8 @@ ol {
   overflow: auto;
   position: relative;
   height: 298px;
+  max-width: 399px;
+  padding: 2px;
 }
 
 .content__details {
@@ -225,24 +229,27 @@ ol {
 
 .content__video-card-description-container {
   display: block;
-  max-width: 100%;
+  width: 200px;
   height: 100%;
 }
 
 .content__card-link {
   text-decoration: none;
   color: #fff;
+  display: block;
+  margin: 2px;
 }
 
 .content__video-card-title {
   font-family: 'Oswald', sans-serif;
   font-weight: 700;
-  font-size: 30px;
+  font-size: 29px;
   line-height: 100%;
   text-transform: uppercase;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden; 
+  max-width: 200px;
 }
 
 .content__video-card-description {
@@ -252,14 +259,8 @@ ol {
 }
 
 .more-button {
-  min-width: 393px;
+  min-width: 100%;
   min-height: 34px;
-  margin: 2px;
-}
-
-.content__card-link {
-  display: block;
-  margin: 2px;
 }
 
 .content__card-link_current {
